Change folder names

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 
 <html lang="en">
-  <head></head>
+  <head>
+    <script>. src="../bower_components/requirejs/require" data-main="/js/require_main"</script>
+  </head>
   <meta/>
   <body>
     <h1>Main Discussion</h1>
